# compression_suite

./: 8x8Block.cpp  BGRtoYCbCr.cpp  BitPacking.h  CMakeLists.txt  Compression_System.cpp  ComputeResidual.cpp  ContainerFormat.cpp  ContainerFormat.h  DCT2.cpp  DecodeChannel.cpp  DecodeImage.cpp  DecodeVideo.cpp  Dequantization.cpp  DownSampling420.cpp  DropTableWidget.cpp  DropTableWidget.h  EncodeVideo.cpp  ExctractFrames.cpp  FileFormating.h  Huffman.h  HuffmanEncode.cpp  IDCT1D.cpp  IDCT2D.cpp  ImageCodec.h  JPEGModules.h  MotionEstimation.cpp  MotionEstimation.h  PSNR.cpp  PackBits.cpp  QuatizationLoss.cpp  README.md  RLE.cpp  RLE.h  ReconstructResidual.cpp  VideoCodec.h  VideoPlayer.cpp  VideoPlayer.h  WriteImg.cpp  compressImg.cpp  compressionRatio.cpp  (+15 more)
